Issue 10 - added some drop-down menus for axis scale and axis sort options (hidden by default, they can be revealed when appropriate.)

--- a/css/charts.css
+++ b/css/charts.css
@@ -54,3 +54,19 @@
   background-color: blue;
   color: white;
 }
+
+#x-axis-scale {
+  display: none;
+}
+
+#x-axis-sort {
+  display: none;
+}
+
+#y-axis-scale {
+  display: none;
+}
+
+#y-axis-sort {
+  display: none;
+}
